--- a/templates/login.html
+++ b/templates/login.html
@@ -83,6 +83,15 @@
 </div>
 <div class="glass-panel p-8 md:p-10 rounded-2xl border border-surface-border shadow-2xl relative overflow-hidden">
 <div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-transparent via-primary to-transparent opacity-50"></div>
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        <ul class=flashes>
+            {% for cat, msg in messages %}
+                <li class="{{ cat }}"> {{ msg}} </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+{% endwith %}
 <form action="{{ url_for('login') }}" method="post" space-y-6">
 <div class="space-y-2">
 <label class="block text-sm font-medium text-gray-300" for="email">Email Address</label>
@@ -104,13 +113,13 @@
 <input name="password" class="w-full rounded-lg bg-surface-dark/80 border border-surface-border pl-10 pr-4 py-3 text-white placeholder-gray-500 focus:border-primary focus:ring-0 outline-none transition-all input-glow" id="password" placeholder="••••••••" required="" type="password"/>
 </div>
 </div>
-<button class="w-full h-12 flex items-center justify-center rounded-lg bg-primary hover:bg-primary/90 text-white font-bold text-base transition-all shadow-[0_0_15px_rgba(131,60,246,0.4)] hover:shadow-[0_0_20px_rgba(131,60,246,0.6)] transform hover:-translate-y-0.5" type="submit">
+<button class="w-full mt-6 h-12 flex items-center justify-center rounded-lg bg-primary hover:bg-primary/90 text-white font-bold text-base transition-all shadow-[0_0_15px_rgba(131,60,246,0.4)] hover:shadow-[0_0_20px_rgba(131,60,246,0.6)] transform hover:-translate-y-0.5" type="submit">
                         Log In
                     </button>
 <div class="text-center pt-2">
 <p class="text-gray-400 text-sm">
                             Don't have an account? 
-                            <a class="text-primary hover:text-purple-400 font-bold transition-colors" href="{{ url_for('signup') }}">Sign up here</a>
+                            <a class="mt-2 text-primary hover:text-purple-400 font-bold transition-colors" href="{{ url_for('signup') }}">Sign up here</a>
 </p>
 </div>
 </form>
